--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "live-server public/",
-    "build": "webpack",
+    "serve": "live-server public/",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "build-babel": "babel src/app.js --out-file=public/bundle.js --presets=env,react --watch",
     "dev-server": "webpack-dev-server"
   },
@@ -18,6 +19,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^0.28.4",
     "dependencies": "0.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
