--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "build-babel": "babel src/app.js --out-file=public/bundle.js --presets=env,react --watch",
-    "dev-server": "webpack-dev-server"
+    "dev-server": "webpack-dev-server",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "Abhish",
   "license": "ISC",
@@ -19,6 +21,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^0.28.4",
     "dependencies": "0.0.1",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^3.0.2",
     "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
